--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -260,16 +260,9 @@
         </div>
     </div>
 </div>
-<div class="container-fluid background-dark-blue-color">
-    <div class="custom-container">
-        <div class="row main-footer-participiate m-0">
-            <div class="col">
-                <div class="row">
-                    <div class="col-2 h font-white-color" style="padding-left: 0;">
-                        <strong>ARCS Partners:</strong>
-                    </div>
-                    <div class="col-10">
-                        <div class="row justify-content-start">
+<div class="w-full py-4" style="background-color: #255A60;">
+
+                        <div class="row justify-center items-center footer-images">
                             <div class="col-auto participiate-logo footer-navbar-padding">
                                 <a href="https://gu.se"><img class="footer-patner-logo"
                                                              src="{% static 'icons/gu-neg-500px-square-300x300.png' %}"
@@ -291,11 +284,9 @@
                                                               alt="{% trans '' %}"/></a>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
+
 </div>
 <div class="container-fluid">
     <div class="row d-flex justify-content-center align-items-center policy-footer-font policy-footer-menu">
