--- a/ArcsSystem/static/css/base.css
+++ b/ArcsSystem/static/css/base.css
@@ -98,15 +98,6 @@ body{
     font-size: 14 !important;
 }
 
-a{
-    color: #0c5696;
-    transition: 0.4s;
-}
-
-a:hover:not(.main-menu-buttons-font) {
-    color: #adaaaa;
-    transition:0.4s;
-}
 p{
     font-family: "Lato", Helvetica, sans-serif ;
     font-size: 14px;
@@ -717,8 +708,138 @@ font-family: Helvetica;
     object-fit: cover;
 } 
 
+.project-filter {
+    display:flex;
+    align-items: center;
+    margin-right: 20px;
+}
 @media screen and (max-width:700px) {
  .project-detail-image {
      width:"100%";
  }   
+    .project-filter {
+        margin-right:0px;
+        margin-bottom: 10px;
+    }
+}
+
+.footer-images img {
+    width:60px;
+}
+
+#menuToggle
+{
+  position: relative;
+  top: 30px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; 
+  z-index: 2; 
+  
+  -webkit-touch-callout: none;
+}
+
+
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #232323;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu
+{
+  position: absolute;
+  width: 100%;
+  margin: -60px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  height:100vh;
+  background: #BED4D1;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  display:flex;
+  flex-direction: column;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu a
+{
+  padding-bottom: 20px;
+}
+
+#menuToggle input:checked ~ ul
+{
+  transform: none;
 }
