--- a/ArcsSystem/templates/projects/project_list.html
+++ b/ArcsSystem/templates/projects/project_list.html
@@ -18,7 +18,7 @@
 
         <div class="flex flex-col md:flex-row border-t-2 border-b-2 border-color-accent px-4 py-4 mb-4 w-full md:items-center md:justify-around justify-center">
                 {% for one_item in None|line_is_project %}
-                    <div class="flex items-center mr-4 mb-4 md:mb-0">
+                    <div class="project-filter">
                         <span class="text-xl md:text-3xl playfair-font font-extrabold" >Visa</span>
                         <select id="kw_eng" name="kw_eng" class="custom-dropdown ml-4">
                             <option value="all" > {% trans "All" %} </option>
@@ -34,7 +34,7 @@
                 {% endfor %}
 
 
-            <div class="flex items-center mr-4 mb-4 md:mb-0">
+            <div class="project-filter">
                 <span class="text-xl md:text-3xl playfair-font font-extrabold" >projekt i</span>
 
                 <select id="science_type" name="science_type" class="custom-dropdown ml-4">
@@ -48,7 +48,7 @@
                 </select>
             </div>
 
-            <div class="flex items-center mr-4 mb-4 md:mb-0">
+            <div class="project-filter">
                 <p class="text-xl md:text-3xl playfair-font font-extrabold">sorterat efter</p>
 
                 <select id="sort" name="sort" class="custom-dropdown ml-4">
