--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -28,7 +28,7 @@
 </head>
 <!-- open body of page -->
 <body>
-    <!-- header
+    <!-- header -->
         <div class="container-fluid custom-container">
     <div id="main-header" class="row">
         <div class=" align-self-center d-none d-md-block col-3 h">
@@ -120,8 +120,8 @@
                         <strong>Listen</strong>
                     </button>
                 </div>
-                <-- user login starts here
-                -- user is loged in: show my_page and logout
+
+          
                 {% if user.is_authenticated %}
                     <div id="my_page" class="justify-content-end align-items-center col-sm-12 col-md-4 h">
                         <div class="dropdown">
@@ -148,7 +148,7 @@
                         </div>
                     </div>
 
-                    <-- user is NOT loged in: show Signup, login 
+
                 {% else %}
                     <div id="signup" class="justify-content-end align-items-center col-sm-12 col-md-4 h">
                     <button class="btn p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
@@ -169,13 +169,13 @@
                         </button>
                     </div>
                 {% endif %}
-                <-- user login ends here
+
                 </div>
             </div>
         </div>
     </div>
 </div>
-<-->
+
 <!--End of header-->
 <div class="w-full" style="padding: 0;">
         {% include "nav_main.html" %}
