removed duplicate logo

--- a/ArcsSystem/templates/nav_main.html
+++ b/ArcsSystem/templates/nav_main.html
@@ -110,10 +110,10 @@
 
 
 
-        <a class="pl-16"  href= {% url 'staticpages:homepage_view' %}>
+      <!--  <a class="pl-16"  href= {% url 'staticpages:homepage_view' %}>
             <img class="w-40" src="{% static 'icons/medborgarforskning-C-1000px_1.png' %}"
                  alt="{% trans 'Medborgarforskning.se Logo linking to the site homepage' %}"/>
-        </a>
+        </a>-->
     </div>
 
 
@@ -147,7 +147,7 @@
                 <img class="w-32" src="{% static 'icons/medborgarforskning-C-1000px_1.png' %}"
                      alt="{% trans 'Medborgarforskning.se Logo linking to the site homepage' %}"/>
             </a>
-            
+
             <a class="nav-link dropdown-toggle pl-8 text-black bg-color-primary" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ;">
 {% trans "UTFORSKA" %}        </a>
             <div class="dropdown-menu main-menu-buttons bg-color-primary " aria-labelledby="navbarDropdown">
